--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 	<parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.6</version>
+    <version>3.4.0</version> <!-- Atualizado para a versão mais recente -->
     <relativePath/>
-    </parent>
+   </parent>
 	<groupId>com.example</groupId>
 	<artifactId>kakula</artifactId>
 	<version>0.0.1</version>
@@ -55,6 +55,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-jdbc</artifactId>
+</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
